# app-recovery-check

./: .gitignore  CHANGELOG.md  Makefile  README.md  RELEASE_POLICY.md  TODO.md  ledger_app.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_tests_and_analysis.yml  ci-workflow.yml  codeql-workflow.yml  ledger-rule-enforcer.yml  lint-workflow.yml  release-workflow.yml
src/: bolos_ux.c  bolos_ux.h  bolos_ux_common.h  bolos_ux_common_keyboard.c  bolos_ux_nanos.c  bolos_ux_nanos.h  bolos_ux_nanos_keyboard.c  bolos_ux_nanox.c  bolos_ux_nanox.h  bolos_ux_nanox_keyboard.c  bolos_ux_onboarding_3_restore.c  bolos_ux_onboarding_4_restore_word.c  constants.h  main.c  nanos_enter_phrase.c  nanos_pick_phrase_length.c  nanox_enter_phrase.c  ui.c  ui.h  ux_bip39.c  ux_nano.c  ux_nano.h  ux_nano_keyboard.c  ux_nanos.c  ux_nanos.h  ux_nanos_keyboard.c  ux_nanox.c  ux_nanox.h  ux_nanox_keyboard.c  ux_sskr.c  ux_stax.c  ux_stax.h
src/bc-sskr/: encoding.c  encoding.h  group.h  shard.h  sskr-constants.h  sskr-errors.h  sskr.c  sskr.h
src/bc-sskr/bc-shamir/: bc-shamir.h  hazmat.c  hazmat.h  interpolate.c  interpolate.h  memzero.c  shamir-constants.h  shamir.c  shamir.c.orig  shamir.h
src/fatstacks/: passphrase_length_screen.c  ui.c  ui.h  ux_fatstacks.c
src/nano/: nanos_enter_phrase.c  nanox_enter_phrase.c  ui.c  ui.h  ui_nano.c  ux_nano.c  ux_nano.h  ux_nano_bip39.c  ux_nano_keyboard.c  ux_nano_sskr.c  ux_nanos.c  ux_nanos.h  ux_nanos_keyboard.c  ux_nanox.c  ux_nanox.h  ux_nanox_keyboard.c
src/sskr/: group.h  shard.h  sskr-constants.h  sskr.c  sskr.h
src/sskr/sss/: interpolate.c  interpolate.h  sss-constants.h  sss.c  sss.h
src/stax/: layout_generic_screen.c  layout_generic_screen.h  mnemonic.c  mnemonic.h  passphrase_length_screen.c  passphrase_length_screen.h  ui.c  ui_stax.c  ux_stax.c  ux_stax.h
src/ux_common/: common.h  common_bip39.h  common_sskr.h  onboarding_electrum.c  onboarding_seed_bip39.c  onboarding_seed_rom_variables.c  onboarding_seed_rom_variables.h  onboarding_seed_sskr.c
src_ux_common/: bolos_ux_common_bip39.h  bolos_ux_onboarding_electrum.c  bolos_ux_onboarding_seed_bip39.c  bolos_ux_onboarding_seed_pbkdf2.c  bolos_ux_onboarding_seed_rom_variables.c  bolos_ux_onboarding_seed_rom_variables.h
test/speculos/: README.md  nanos-bip39-12-word.test  nanos-bip39-18-word.test  nanos-bip39-24-word.test  nanos-sskr-128bit.json  nanos-sskr-128bit.test  nanos-sskr-256bit.test
tests/: speculos_mnemonic.txt
tests/deprecated/: README.md  nanos-bip39-12-word.json  nanos-bip39-12-word.test  nanos-bip39-18-word.json  nanos-bip39-18-word.test  nanos-bip39-24-word.json  nanos-bip39-24-word.test  nanos-sskr-128bit.json  nanos-sskr-128bit.test  nanos-sskr-256bit.json  nanos-sskr-256bit.test  stax-bip39-12-word.test
tests/functional/: app.py  conftest.py  navigator.py  requirements.txt  test_bip39_12word.py  test_bip39_18word.py  test_bip39_24word.py  test_fatstacks.py  test_fatstacks_full.py  test_fatstacks_options.py  test_sskr_128bit.py  test_sskr_256bit.py  utils.py
tests/unit/: CMakeLists.txt  Makefile  test_stax_mnemonic.c
tests/unit/lib/: random.c  testutils.c  testutils.h
tests/unit/lib/bolos/: cx_aes.h  cx_bn.c  cx_crc.c  cx_crc.h  cx_ec.h  cx_mpi.c  cxlib.h
tests/unit/tests/: bip39.c  bip39_words.c  roundtrip.c  shamir.c  sskr.c  sskr_words.c  sss.c  words.c
